Fixed spacing in Resource content areas. Spreadsheet #23.

--- a/src/resources/postcss/help-hub.pcss
+++ b/src/resources/postcss/help-hub.pcss
@@ -109,7 +109,7 @@ ul.tec-help-list__list-expanded {
 	border-bottom: 1px solid var(--tec-admin-core-grey-10);
 }
 
-.ui-accordion-header-active{
+.ui-accordion-header-active {
 	border-bottom: 1px solid var(--tec-admin-core-grey-10);
 }
 
@@ -190,6 +190,7 @@ ul.tec-help-list__list-expanded {
 .tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block:first-child .tec-settings-form__section-header {
 	display: block;
 }
+
 @media (--viewport-xsmall) {
 	.tec-tab-container {
 		padding: var(--tec-spacer-7);
@@ -239,6 +240,14 @@ ul.tec-help-list__list-expanded {
 }
 
 @media (--viewport-xlarge) {
+	.tribe_events_page_tec-events-settings #tec-settings-form .tec-settings-form__header-block, .tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block {
+		margin: var(--tec-spacer-0) var(--tec-spacer-1);
+	}
+
+	.tribe_events_page_tec-events-settings #tec-settings-form .tec-settings-form__header-block, .tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__header-block--horizontal {
+		margin: initial;
+	}
+
 	.tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-form__content-section .tec-settings-form__header-block {
 		padding-right: 0;
 	}
